--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "pg": "^8.9.0",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
