--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.23.2",
     "sequelize-cli": "^6.5.2",
     "swagger-jsdoc": "^6.2.8",
